* Support floating point values for loot drop chance values.
* Add 'hide_timeout' option to stat bar configuration to support auto-hiding. (Leszek Cimała)
* Added an Interface option to disable stat bar auto-hiding globally.
* Add 'no_stash' property to item definitions to prevent items from being placed in the stash.
* Add low HP notification system. (Leszek Cimała)

Engine fixes:

* Fixed event activation being tied to distance to the camera position. It is now correctly tied to distance from the player.
* Mouse movement and mouse aim now calculate direction relative to the player instead of relative to the screen.
* Fixed enemy AI so that enemies can now enter combat if a hero ally is in their proximity.
* Fix --data-path command line flag on Windows.
* Fixed dialog not being available if it lacked a topic.
* Fixed loot drop rate bonus having no effect when loot drop chance was too low.
* Fix bug where the wrong requirements were checked for passive powers that had been granted bonus points.
* Items that can't be stashed are now dropped on the ground upon opening the stash.
* Prevent re-binding the primary Main1 binding, which could break many interactions.
* Removed the ability to re-bind the Ctrl, Shift, Alt, and Delete keys, since they correspond to specific keyboard keys.
* Fix crash when trying to load a mod that contained 'engine/default_keybindings.txt'. (nwtour)
* Display XP stat bar value as relative to current level instead of total XP. (Leszek Cimała)
* Fix key bindings not working when switched to a non-US keyboard layout. (nwtour)
* Fix segfault when NPC filename is invalid.
* Fix inventory tooltips covering books when using no mouse.
* Fix navigation of dialog menu when using no mouse.
* Fix upgrading powers when using no mouse.

Game updates:

* Fixed an oversight that allowed easy farming of the Torture Chambers boss and loot chests.